ChangeLog

Name: William Lai
Date: 04-02-2013
Description: ChangeLog overhaul
     * ChangeLog: Added several entries and clarified some file names

Name: Vincent Wong
Date: 03-29-2013
Description: Minor tweaks to game logic and added some GUI functionality
     * New files: Images/pieceBB.png, Images/pieceBK.png, Images/pieceBN.png, Images/pieceBP.png, Images/pieceBQ.png, Images/pieceBR.png, Images/pieceWB.png, Images/pieceWK.png, Images/pieceWN.png, Images/pieceWP.png, Images/pieceWQ.png, Images/pieceWR.png
     * src/Board.java: Added check for NULL in copy constructor, used placePiece function instead of directly accessing private member variable
     * src/Definitions.java: Changed values of NUMPIECES and PIECENAMES
     * src/Game.java: Imported java.awt.event.*, now implements MouseListener, added function setTurn
     * src/Move.java: Added toString function
     * src/StandardChessGame.java: Imported java.awt.event.*, added new member variable Piece m_selected, added MouseListener in constructor, used setTurn function, reimplemented paint function to reduce flickering, added temporary solution because moves.contain seems to have an issue, added functions mousePressed, select, moveSelected, update, and stop for GUI
     * src/StandardChessGameGraphics.java: Made some constants final and changed data structure to one Map instead of a Map and an ArrayList, added functions drawSelected, getRow, getCol

Name: Vincent Wong
Date: 03-28-2013
Description: Some changes to data and toString, made Game class an Applet, and added StandardChessGameGraphics class for graphics
     * New files: Images/pieceB.png, Images/pieceK.png, Images/pieceN.png, Images/pieceP.png, Images/pieceQ.png, Images/pieceR.png, src/StandardChessGameGraphics.java
     * src/Bishop.java: Added color parameter to constructors, removed toString function
     * src/Definitions.java: Added new constants NUMPIECES and PIECENAMES