@@ -59,6 +59,11 @@ public class Knight extends Piece
 		return legalMoves;
 	}
 	
+	public ArrayList<Move> threats()
+	{
+		return moves();
+	}
+	
 	public Piece clone()
 	{
 		return new Knight(this);
